# Perceptron

./: CMakeLists.txt  README.md  interface.h  main.cpp  matrix.h  mnist.h  network.h  trained_model.h5
